fixed font size and line height for better readability

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,6 +27,10 @@ body {
     min-height: 100vh;
     font-family: $primaryFont;
     overflow-y: scroll;
+    p, li {
+        font-size: 1.1rem !important;
+        line-height: 1.7rem !important;
+    }
     main {
         width: 310px;
         margin: auto;
@@ -53,7 +57,7 @@ body {
             .contact-number {
                 a {
                     .fa-phone-alt {
-                        font-size: 1rem;
+                        font-size: 1rem !important;
                         color: $secondaryAccentColor;
                         margin-right: 0.5em;
                     }
@@ -107,7 +111,7 @@ body {
             .hero-text-container {
                 width: 13.3125rem;
                 h1 {
-                    font-size: 1.875rem;
+                    font-size: 1.875rem !important;
                     font-weight: 700;
                 }
                 .line {
@@ -118,9 +122,9 @@ body {
                     margin: 0.8125rem 0;
                 }
                 p {
-                    font-size: 0.875rem;
+                    font-size: 0.875rem !important;
                     font-weight: 400;
-                    line-height: 150%;
+                    line-height: 150% !important;
                 }
                 .hero-cta {
                     margin: 1.6875rem 0 0 0;
@@ -312,7 +316,7 @@ body {
         text-align: center;
         background-color: #000;
         p {
-            font-size: 0.625rem;
+            font-size: 0.625rem !important;
             font-weight: 400;
             color: white;
         }
